prueba de archivo index
prueba de archivo index

--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
         <title>Impresoras e Impresoras</title>
     </head>
     <body>
-		<h1>BIENVENDOS A IMPRESORAS E IMPRESORAS</h1>
-		<header id="encabezado">
-            <nav id="menu"> <!-- Barra de Menu -->
+	<h1>BIENVENDOS A IMPRESORAS E IMPRESORAS</h1>
+	<header id="encabezado">
+        <div>
+	    <nav id="menu"> <!-- Barra de Menu -->
             </nav>
         </div>
         </header>
