--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Impresoras e Impresoras</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="css/estilosm1e1.css">
         <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Contrail+One|Montserrat" rel="stylesheet">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -24,7 +25,7 @@
                     <li> <a href="#hogar"><strong> HOGAR </strong></a> </li>
                     <li> <a href="#empresa"><strong> EMPRESA </strong></a> </li>
                     <li><a href="#mantenimiento"><strong> MANTENIMIENTO </strong></a></li>
-                    <li><a href="html/productos.html" target="_blank"> <strong>PRODUCTOS</strong></a></li>
+                    <li><a href="html/productos.html"> <strong>PRODUCTOS</strong></a></li>
                 </ul>
                 </nav>
             </div>
